Fixed calculator on mobile devices

--- a/public/projects/javascriptCalculator/resources/css/styles.css
+++ b/public/projects/javascriptCalculator/resources/css/styles.css
@@ -101,6 +101,14 @@ body {
 /*--------- MEDIA QUERIES -------------*/
 @media only screen and (max-width: 768px) {
   #calculator {
-      width: 99vw;
+    width: 90vw;
+    
  }
+ 
+ #calculator button{
+  padding: 20px;
+  
+}
+
+
 }
